force-app/main/default/objects/Repositorio__c/Repositorio__c.object-meta.xml
<CustomObject>
    <label>Repositório</label>
    <nameField>
        <label>Nome do repositório</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositórios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>