force-app/main/default/objects/Repositorio__c/fields/Estrela__c.field-meta.xml
<CustomField>
    <fullName>Estrela__c</fullName>
    <label>Estrela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>