force-app/main/default/objects/Repositorio__c/fields/Fork__c.field-meta.xml
<CustomField>
    <fullName>Fork__c</fullName>
    <label>Fork</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>