force-app/main/default/objects/Repositorio__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <externalId>true</externalId>
    <label>IdExterno</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>